Fixed 'X' not appearing on alertify on Firefox The `#` in color codes needed to be urlencoded as `%23`

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -284,7 +284,7 @@ footer .company-mission {
   text-align: center;
   box-shadow: 1px 1px 20px 0 rgba(0, 0, 0, 0.25);
   cursor: pointer;
-  background-image: url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' width='25' height='30'><line x1='5' y1='10' x2='15' y2='20' stroke='#bbb' stroke-width='2'/><line x1='15' y1='10' x2='5' y2='20' stroke='#bbb' stroke-width='2'/></svg>");
+  background-image: url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' width='25' height='30'><line x1='5' y1='10' x2='15' y2='20' stroke='%23bbb' stroke-width='2'/><line x1='15' y1='10' x2='5' y2='20' stroke='%23bbb' stroke-width='2'/></svg>");
   background-repeat: no-repeat;
   background-position: right top;
   background-color: #ebf0f3;
